# fast-api-template

./: .dockerignore  Dockerfile  Pipfile  README.md  pyproject.toml  run_backend.py
alembic/: env.py
alembic/versions/: 14ac9914f247_first_revision.py  49d0f84a1f5a_first_revision.py  ed59c370a52f_first_revision.py
backend/: main.py  middleware.py
backend/api/: api.py  deps.py
backend/api/endpoints/: login.py  places.py  user.py
backend/core/: config.py  security.py
backend/crud/: __init__.py  base.py  crud_place.py  crud_user.py
backend/db/: base.py  session.py
backend/middleware/: db_session_middleware.py  health_check_middleware.py  response_middleware.py
backend/models/: __init__.py  place.py  user.py
backend/schemas/: __init__.py  place.py  resp.py  user.py
docker/compose/: compose.backend.yml
docker/nginx/: nginx.conf
docker/run_command/: alembic.refresh  backend.app  backend.entrypoint  backend.nginx
scripts/: alembic_revision.sh  alembic_update.sh  docker.build.sh  docker.compose.backend.sh  docker.entrypoint.init-db.sh  docker.run.sh  runserver.sh
